--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>King George Delicacies</title>
 </head>
 <body>
-    
+    <p>
+       <strong>YUMMY IN YOUR TUMMY</strong>
+        <P>Welcome to King George's delicacies! We have a wide variety of foods available for you to enjoy and we are always open</P>
+        <img src="images/istockphoto-1457889029-612x612.jpg" alt="Pizza piece">
+    </p>
 </body>
 </html>
