--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
        <strong>YUMMY IN YOUR TUMMY</strong>
         <P>Welcome to King George's delicacies! We have a wide variety of foods available for you to enjoy and we are always open</P>
         <img src="images/istockphoto-1457889029-612x612.jpg" alt="Pizza piece">
+        <p>
+            <strong>A scrumptous steak dinner , best served with free-range jelly beans</strong>
+            ><p>The preferred meal of Charlie Kelly, from "it's always sunny in Philadelphia".</p>
+        </p>
     </p>
 </body>
 </html>
