Menu ptions and service instructions added

--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
         <p>
             <strong>A scrumptous steak dinner , best served with free-range jelly beans</strong>
             <p>The preferred meal of Charlie Kelly, from "it's always sunny in Philadelphia".</p>
-            <ol>
-                <li>Steaks</li>
+            <ul>
                 <li>Fish</li>
+                <li>Chicken</li>
+                <li>Mukimo</li>
+                <li>Ugali</li>
+            </ul>
+        </p>
+        <p>
+            <STRong>Service instructions</STRong>
+            <ol>
+                <li>Welcomed at the door</li>
+                <li>Guided to sitting area</li>
+                <li>Waiter brings ove menu and takes orders</li>
+                <li>Food is delivered within 20 minutes and customer is allowed to dine</li>
+                
             </ol>
         </p>
     </p>
